--- a/Error.html
+++ b/Error.html
@@ -18,53 +18,52 @@
         <div class="logo">
             <a href="Hjem.html"><img src="Images/Logo.png"></a>
         </div>
-
+        
         <div class="logotext">
-            <a href="Hjem.html"><p>Vinterstaden RP</p></a>
+            <a href="Hjem.html"><p>Mystic Constructions</p></a>
         </div>
 
         <div class="maintext">
             <ul class="links">
-                <li><a href="Hjem.html" class="underline">Hjem</a></li>
-                <li><a href="Om.html" class="underline">Om</a></li>
-                <li><a href="Søknader.html" class="underline">Søknader</a></li>
-                <li><a href="Regelverket.html" class="underline">Regelverket</a></li>
-                <li><a href="Kontakt.html" class="underline">Kontakt</a></li>
-                <li><a href="Nyheter.html" class="underline" id="news">Nyheter</a></li>
+                <li><a href="Home.html" class="underline">Home</a></li>
+                <li><a href="About.html" class="underline">About</a></li>
+                <li><a href="Games.html" class="underline">Games</a></li>
+                <li><a href="Rules.html" class="underline">Rules</a></li>
+                <li><a href="Contact.html" class="underline">Contact</a></li>
+                <li><a href="News.html" class="underline" id="news">News</a></li>
             </ul>
         </div>
        <div class="button">
-        <a href="BliMed.html" class="action_btn2">Bli Med</a>
-        <a href="Error.html" class="action_btn">Login</a>
+        <a href="JoinUs.html" class="action_btn2">Join Us</a>
+        <a href="InWork.html" class="action_btn">Login</a>
        </div>
         <button class="toggle_btn">☰</button>
     </div>
 
     <div class="dropdown_menu">
-        <li><a href="Hjem.html" class="underline">Hjem</a></li>
-        <li><a href="Om.html" class="underline">Om</a></li>
-        <li><a href="Søknader.html" class="underline">Søknader</a></li>
-        <li><a href="Regelverket.html" class="underline">Regelverket</a></li>
-        <li><a href="Kontakt.html" class="underline">Kontakt</a></li>
-        <li><a href="Nyheter.html" class="underline" id="news">Nyheter</a></li>
-        <li><a href="BliMed.html" class="action_btn2">Bli Med</a></li>
-        <li><a href="Error.html" class="action_btn">Login</a></li>
+        <li><a href="Home.html" class="underline">Home</a></li>
+        <li><a href="About.html" class="underline">About</a></li>
+        <li><a href="Games.html" class="underline">Games</a></li>
+        <li><a href="Rules.html" class="underline">Rules</a></li>
+        <li><a href="Contact.html" class="underline">Contact</a></li>
+        <li><a href="News.html" class="underline" id="news">News</a></li>
+        <li><a href="JoinUs.html" class="action_btn2">Join Us</a></li>
+        <li><a href="InWork.html" class="action_btn">Login</a></li>
     </div>
 
     <main>
         <section id="main">
-            <h1>Feil!</h1>
-            <h2>Kontakt brukerstøtten hvis dette fortsetter å skje.</h2>
-            <h3 id="countdown">Du vil bli omdirigert til <strong>front siden</strong> om 5 sekunder.</h3>
+            <h1>Error!</h1>
+            <h2>Contact support if this continues to happen.</h2>
+            <h3 id="countdown">You will be redirected to the <strong>homepage</strong> in 5 seconds.</h3>
         </section>
-    </main>
+    </main>    
     
-     <div class="social-container">
-        <img src="Images/YT.png" alt="" onclick="YouTube()" class="social">
-        <img src="Images/Tiktok.png" alt="" onclick="TikTok()" class="social">
+    <div class="social-container">
+        <img src="Images/Twitter.png" alt="" onclick="Twitter()" class="social">
         <img src="Images/Discord.png" alt="" onclick="Discord()" class="social">
     </div>
-    <p class="copyright">Copyright 2024 Vinterstaden RP. All rights reserved.</p>
+    <p class="copyright">© Copyright 2024 Mystic Consutrctions. All rights reserved.</p>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
@@ -74,7 +73,7 @@
 
             const interval = setInterval(() => {
                 countdown--;
-                textElement.innerHTML = `Du vil bli omdirigert til front siden om ${countdown} sekunder.`;
+                textElement.innerHTML = `You will be redirected to the front page in ${countdown} seconds.`;
 
                 if (countdown <= 0) {
                     clearInterval(interval);
