--- a/Home.html
+++ b/Home.html
@@ -66,20 +66,21 @@
                 <br>The Studio is also known as „Frosty‘s Games“ 🐧</strong>
             </p>
             <button class="join" onclick="Join()">Join</button>
-            
-            <!-- Countdown Container moved here -->
-            <div class="countdown-container">
-                <h1>Wonder World releases in</h1>
-                <div class="countdown">
-                    <div class="time-unit" id="days"></div>
-                    <div class="time-unit" id="hours"></div>
-                    <div class="time-unit" id="minutes"></div>
-                    <div class="time-unit" id="seconds"></div>
-                </div>
-            </div>
         </section>
     </main>
     
+    <div class="countdown-container"></div>
+    <h1>Wonder World releases in</h1>
+    <div class="countdown">
+        <div class="time-unit" id="days"></div>
+        <div class="time-unit" id="hours"></div>
+        <div class="time-unit" id="minutes"></div>
+        <div class="time-unit" id="seconds"></div>
+    </div>
+</div>
+
+<br><br><br><br><br>
+
     <div class="social-container">
         <img src="Images/Twitter.png" alt="" onclick="Twitter()" class="social">
         <img src="Images/Discord.png" alt="" onclick="Discord()" class="social">
