--- a/JoinUs.html
+++ b/JoinUs.html
@@ -16,11 +16,11 @@
     
     <div class="navbar">
         <div class="logo">
-            <a href="Hjem.html"><img src="Images/Logo.png"></a>
+            <a href="Home.html"><img src="Images/Logo.png"></a>
         </div>
         
         <div class="logotext">
-            <a href="Hjem.html"><p>Mystic Constructions</p></a>
+            <a href="Home.html"><p>Mystic Constructions</p></a>
         </div>
 
         <div class="maintext">
