--- a/InWork.html
+++ b/InWork.html
@@ -52,7 +52,7 @@
     </div>
     <main>
         <section id="main">
-            <h1>🚧 THIS FEATURE IS STILL IN WORK 🚧</h1>
+            <h1>🚧 THIS FEATURE IS STILL IN WORKS 🚧</h1>
             <hr>
             <h2 id="countdown">You will be redirected to the <strong>homepage</strong> in 5 seconds.</h2>
         </section>        
