--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/x-icon" href="Images/Logo.png">
+    <link rel="icon" type="image/x-icon" href="Images/Top.png">
     <link rel="stylesheet 1" href="CSS/Main.css">
     <link rel="stylesheet 2" href="CSS/Contact.css">
 
@@ -71,6 +71,8 @@
         </section>
     </main>
     
+<br><br><br>
+
     <div class="social-container">
         <img src="Images/Twitter.png" alt="" onclick="Twitter()" class="social">
         <img src="Images/Discord.png" alt="" onclick="Discord()" class="social">
