--- a/Games.html
+++ b/Games.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/x-icon" href="Images/Logo.jpg">
+    <link rel="icon" type="image/x-icon" href="Images/Top.png">
     <link rel="stylesheet 1" href="CSS/Main.css">
     <link rel="stylesheet 2" href="CSS/Games.css">
 
@@ -29,7 +29,7 @@
                 <li><a href="About.html" class="underline">About</a></li>
                 <li><a href="Games.html"class="disabled">Games</a></li>
                 <li><a href="Rules.html" class="underline">Rules</a></li>
-                <li><a href="Support.html" class="underline">Support</a></li>
+                <li><a href="Contact.html" class="underline">Contact</a></li>
                 <li><a href="News.html" class="underline" id="news">News</a></li>
             </ul>
         </div>
@@ -44,8 +44,8 @@
         <li><a href="Home.html" class="underline">Home</a></li>
         <li><a href="About.html" class="underline">About</a></li>
         <li><a href="Games.html"class="disabled">Games</a></li>
-        <li><a href="Services.html" class="underline">Services</a></li>
         <li><a href="Rules.html" class="underline">Rules</a></li>
+        <li><a href="Contact.html" class="underline">Contact</a></li>
         <li><a href="News.html" class="underline" id="news">News</a></li>
         <li><a href="JoinUs.html" class="action_btn2">Join Us</a></li>
         <li><a href="InWork.html" class="action_btn">Log in</a></li>
