--- a/JoinUs.html
+++ b/JoinUs.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/x-icon" href="Images/Logo.png">
+    <link rel="icon" type="image/x-icon" href="Images/Top.png">
     <link rel="stylesheet 1" href="CSS/Main.css">
     <link rel="stylesheet 2" href="CSS/JoinUs.css">
 
