--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
     <link rel="icon" type="image/x-icon" href="Images/Top.png">
     <link rel="stylesheet 1" href="CSS/Main.css">
@@ -57,7 +57,7 @@
             <h5><strong>We are a game studio. Working hard to make good roleplay games with high quality assets.
             </strong>
         </h5>
-            <h1>Ofte stilte spørsmål</h1>
+            <h1>Frequently asked questions</h1>
             <div class="box">
                 <h2>When is the next game realising?</h2>
                 <p>The next game is realising in <strong>23-24 october</strong>.</p>
