--- a/Rules.html
+++ b/Rules.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
     <link rel="icon" type="image/x-icon" href="Images/Top.png">
     <link rel="stylesheet 2" href="CSS/Main.css">
