--- a/Games.html
+++ b/Games.html
@@ -62,7 +62,7 @@
                         <h3>Pets Bay</h3>
                         <p>Welcome in Pets Bay! 🐾</p>
                         <a href="" onclick="PetsBay()" class="btn-play">Play</a>
-                        <a href="InWork.html" class="btn">Watch Trailer</a>
+                        <a href="Error.html" class="btn">Watch Trailer</a>
                     </div>
                 </div>
                 <div class="card">
@@ -89,7 +89,7 @@
                             <br>
                             <br>Wonder World // Mystic Construction
                             <br>
-                            <br>Tags 🏷️: Custom Pets , RP , Adopt & Hatch , Pets , My Custom Pets , Games , 🏡</p>
+                            <br>Tags 🏷️: Custom Pets , RP , Adopt & Hatch , Pets , My Custom Pets , Games , 🏡 <br><br></p>
                         <a href="" onclick="WonderWorld()" class="btn-play">Play</a>
                         <a href="Error.html" class="btn">Watch Trailer</a>
                     </div>
