--- a/JoinUs.html
+++ b/JoinUs.html
@@ -56,7 +56,7 @@
             <h1>Join Us</h1>
             <h2>Join our team today! Please fill out this form.</h2>
             <br>
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeb14fJQDV_hIhDIPF-totiqpg3PBtqIvFbwlN-a22_jZ7gRg/viewform" width="500" height="5550" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeb14fJQDV_hIhDIPF-totiqpg3PBtqIvFbwlN-a22_jZ7gRg/viewform">Loading…</iframe>
         </section>
     </main>
     
