--- a/Rules.html
+++ b/Rules.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet 2" href="CSS/Rules.css">
 
     <script src="JavaScript/Main.js"></script>
+    <script src="JavaScript/Rules.js"></script>
 
     <title>Rules</title>
 </head>
@@ -121,6 +122,11 @@
         </section>
     </main>
     
+    <div class="discord-input-container" id="discordInputContainer" style="display: none;">
+        <input type="text" id="discordUsername" placeholder="Enter Discord User ID" required>
+        <button id="submitUsername" onclick="sendUsername()">I have read the rules</button>
+    </div>
+
     <div class="social-container">
         <img src="Images/Twitter.png" alt="" onclick="Twitter()" class="social">
         <img src="Images/Discord.png" alt="" onclick="Discord()" class="social">
