--- a/Home.html
+++ b/Home.html
@@ -80,6 +80,11 @@
     </div>
 </div>
 
+<div class="feedback-input-container" id="feedbackInput" style="display: none;">
+    <input type="text" id="feedback" placeholder="Enter your feedback." required>
+    <button id="submitFeedback" onclick="sendFeedback()">Send ➤</button>
+</div>
+
     <div class="social-container">
         <img src="Images/Twitter.png" alt="" onclick="Twitter()" class="social">
         <img src="Images/Discord.png" alt="" onclick="Discord()" class="social">
